--- a/currencyratewidget/app/style.css
+++ b/currencyratewidget/app/style.css
@@ -4,6 +4,33 @@ body{
   align-items: center;
   margin-top: 100px;
 }
+.widget{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ width: 300px;
+ height: 260px;
+ background: linear-gradient(135deg, rgb(35, 37, 38, 0.5), rgb(90, 90, 90, 0.5));
+ padding: 50px 100px 50px 100px;
+ border: 2px solid rgb(255, 255, 255);
+ border-top-left-radius: 20px;
+ border-top-right-radius: 20px;
+ box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
+}
+.container{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.menu{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+  position: relative;
+}
 
 .flag{
  display: flex;
@@ -27,10 +54,43 @@ body{
 .en:hover{
  border: 2px solid rgb(255, 255, 255);
 }
+
+.en:hover .tooltip-1{
+  visibility: visible;
+  opacity: 1;
+}
 .flagimg1{
  object-fit: cover;
  width: 35px;
  height: 26px;
+}
+
+.hamburger-menu{
+ width: 48px;
+ height: 33px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ border: 2px solid transparent;
+background-color: transparent;
+cursor: pointer;
+padding: 0px;
+margin: 0px;
+}
+
+.hamburger-menu:hover{
+ border: 2px solid rgb(255, 255, 255);
+}
+
+.hamburger-menu:hover .tooltip-3{
+  visibility: visible;
+  opacity: 1;
+}
+
+.icon{
+  width: 48px;
+  height: 33px;
+
 }
 
 .uk{
@@ -45,7 +105,11 @@ body{
 }
 
 .uk:hover{
- border: 2px solid rgb(255, 255, 255);
+   border: 2px solid rgb(255, 255, 255);
+}
+.uk:hover .tooltip-2{
+ visibility: visible;
+ opacity: 1;
 }
 
 .flagimg2{
@@ -53,56 +117,59 @@ body{
  height: 26px;
 }
 
-.container{
- display: flex;
- flex-direction: column;
- justify-content: center;
- width: 300px;
- height: 260px;
- background: linear-gradient(135deg, rgb(35, 37, 38, 0.5), rgb(90, 90, 90, 0.5));
- padding: 50px 100px 50px 100px;
- border: 2px solid rgb(255, 255, 255);
- border-radius: 20px;
- box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
+.tooltip-1, .tooltip-2, .tooltip-3{
+ position: absolute;
+ top: -22px;
+ background-color: rgba(191, 185, 185, 0.5);
+ border-radius: 15px;
+ padding: 2px 5px 2px 5px;
+ font-family: Arial;
+ color: rgb(255, 255, 255);
+ text-align: center;
+ z-index: 1;
+ opacity: 0;
+ transition: opacity 0.3s;
+ visibility: hidden;
 }
 
-.rate{
+.rates-container{
  display: flex;
  flex-direction: column;
 }
 
-.nbu, .deal{
+.nbu-rate, .deal-rate{
  text-align: center;
  font-family: Arial;
  font-size: 17px;
  color: white;
-
-}
-
-.p1{
- font-family: Arial;
- color: white;
- font-weight: bold;
- font-size: 17px;
-}
-
-.p2{
- font-family: Arial;
- color: rgb(0, 0, 0);
- font-weight: bold;
- font-size: 17px;
 
 }
 
 .difference{
+text-align: center;
+ font-family: Arial;
+ font-size: 17px;
+ color: rgb(0, 0, 0);
+ font-weight: bold;
+}
+
+.nbu-label, .deal-label{
+ font-family: Arial;
+ color: white;
+ font-size: 17px;
+}
+
+.diff-label{
  text-align: center;
  font-family: Arial;
  font-size: 17px;
  color: rgb(0, 0, 0);
-
+ font-weight: bold;
 }
 
-.text1, .text2, .text3{
+
+
+.nbu-container, .deal-container, .diff-container{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -158,5 +225,40 @@ color: rgb(255, 255, 36);
 font-size: 20px;
 margin: 0px;
 display: none;
+}
 
+.history.hidden{
+  display: none;
+}
+.history{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ width: fit-content;
+ background: linear-gradient(135deg, rgb(35, 37, 38, 0.5), rgb(90, 90, 90, 0.5));
+ padding: 30px 75px 30px 75px;
+ border: 2px solid rgb(255, 255, 255);
+ border-bottom-left-radius: 20px;
+ border-bottom-right-radius: 20px;
+ box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
+ transform: translateY(-3px);
+
+}
+
+.history-table{
+width: 100%;
+border-collapse: collapse;
+min-width: 350px;
+
+
+}
+
+.history-table th, .history-table td{
+  padding: 12px 0;
+  width: 33.33%;
+  text-align: center;
+  color:white;
+  font-family: Arial;
+  font-size: 16px;
+  border-bottom: 1px solid white;
 }
