--- a/currencyratewidget/app/style.css
+++ b/currencyratewidget/app/style.css
@@ -87,10 +87,36 @@ margin: 0px;
   opacity: 1;
 }
 
+.hamburger-menu-mobile{
+width: 48px;
+height: 33px;
+display: none;
+justify-content: center;
+align-items: center;
+border: 2px solid transparent;
+background-color: transparent;
+cursor: pointer;
+padding: 0px;
+margin: 0px;
+}
+
+.hamburger-menu-mobile:hover{
+  border: 2px solid rgb(255, 255, 255);
+}
+.hamburger-menu-mobile:hover .tooltip-3-mobile{
+  visibility: visible;
+  opacity: 1;
+}
+
 .icon{
   width: 48px;
   height: 33px;
 
+}
+
+.icon-mobile{
+  width: 48px;
+  height: 33px;
 }
 
 .uk{
@@ -117,7 +143,7 @@ margin: 0px;
  height: 26px;
 }
 
-.tooltip-1, .tooltip-2, .tooltip-3{
+.tooltip-1, .tooltip-2, .tooltip-3, .tooltip-3-mobile{
  position: absolute;
  top: -22px;
  background-color: rgba(191, 185, 185, 0.5);
@@ -242,6 +268,7 @@ display: none;
  border-bottom-right-radius: 20px;
  box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
  transform: translateY(-3px);
+ position: relative;
 
 }
 
@@ -252,7 +279,6 @@ min-width: 350px;
 
 
 }
-
 .history-table th, .history-table td{
   padding: 12px 0;
   width: 33.33%;
@@ -261,4 +287,96 @@ min-width: 350px;
   font-family: Arial;
   font-size: 16px;
   border-bottom: 1px solid white;
+}
+
+.closes{
+display: none;
+position: absolute;
+top: 0;
+width: 100%;
+background-color: transparent;
+border: none;
+border-bottom: 2px solid white;
+font-family: Arial;
+font-size: 17px;
+cursor: pointer;
+transition: all 0.3s;
+}
+
+.closes:hover{
+  background-color: rgb(201, 201, 201);
+}
+
+.closes:active{
+  background-color: rgb(201, 201, 201);
+  color:white
+}
+
+@media(max-width: 600px){
+ .widget{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ width: 200px;
+ height: 260px;
+ background: linear-gradient(135deg, rgb(35, 37, 38, 0.5), rgb(90, 90, 90, 0.5));
+ padding: 50px 75px 50px 75px;
+ border: 2px solid rgb(255, 255, 255);
+ border-top-left-radius: 20px;
+ border-top-right-radius: 20px;
+ box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
+}
+.history{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ width: fit-content;
+ background: linear-gradient(135deg, rgb(35, 37, 38, 0.5), rgb(90, 90, 90, 0.5));
+ padding: 30px 0px 30px 0px;
+ border: 2px solid rgb(255, 255, 255);
+ border-bottom-left-radius: 20px;
+ border-bottom-right-radius: 20px;
+ box-shadow: 3px 2px 6px 1px rgb(204, 204, 204);
+ transform: translateY(-3px);
+
+}
+.hamburger-menu-mobile{
+   width: 48px;
+ height: 33px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ border: 2px solid transparent;
+background-color: transparent;
+cursor: pointer;
+padding: 0px;
+margin: 0px;
+}
+
+.hamburger-menu{
+  width: 48px;
+ height: 33px;
+ display: none;
+ justify-content: center;
+ align-items: center;
+ border: 2px solid transparent;
+background-color: transparent;
+cursor: pointer;
+padding: 0px;
+margin: 0px;
+}
+.closes{
+display: block;
+position: absolute;
+top: 0;
+width: 100%;
+background-color: transparent;
+border: none;
+border-bottom: 2px solid white;
+font-family: Arial;
+font-size: 17px;
+cursor: pointer;
+transition: all 0.3s;
+}
+
 }
